@@ -230,7 +230,7 @@ typedef struct
 typedef struct
 {
     unsigned    greybox[4];     /* -A  x1 y1 x2 y2 */
-  //    unsigned    cropbox[4];     /* -B x1 y1 x2 y2 */
+    unsigned    cropbox[4];     /* -B x1 y1 x2 y2 */
     double      aber[4];        /* -C */
     double      gamm[6];        /* -g */
     float       user_mul[4];    /* -r mul0 mul1 mul2 mul3 */
